# previsao_alagamento

./: .gitattributes  .gitignore  README.md  h3_point_interest.ipynb  mapa_alagamentos.html  mapa_alagamentos.py  mapa_alagamentos2.html  metricas.py  modelo_serie_temporal.ipynb  modelo_simples.ipynb  pyproject.toml  saveRF.py  selecao_modelo.ipynb
SQL/: add_alagamentos_main.sql  alagamentos.sql  clean_main_frequentes.sql  consulta_1h_mais_frequentes.sql  consulta_modelo.sql  consulta_modelo_1h.sql  criar_tabela_precipitacao.sql  main_table.sql  precipatacao_estimada.sql
csvs/: alagamento.csv  alagamento7.csv  alagamento_most_occ.csv  alalamentos_ponto_interesse.csv  pontos_de_alagamento_top50 - Pontos_de_Alagamento.csv  teste_streamlit.csv
streamlit-app/: mapa_previsao.py
