[tool.poetry]
name = "previsao-alagamento"
version = "0.1.0"
description = "Repositório temporário para o projeto de previsão de alagamento da FGV"
authors = ["patriciacatandi <patriciabcatandi@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "previsao_alagamento"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
basedosdados = "2.0.0b5"
matplotlib = "3.5.1"
numpy = "1.23.2"
scikit-learn = "1.2.1"
pylint = "^2.12.2"
flake8 = "^4.0.1"
black = "20.8b1"
h3 = "^3.7.6"
statsmodels = "0.14.0"
jupyter = "^1.0.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
